--- a/demo72.html
+++ b/demo72.html
@@ -18,7 +18,6 @@
     <div class="banner">
       <img src="./demo72/images/txt1.png" alt="" class="ban-txt1">
       <div class="ban-txt2">
-        <!-- <img src="./demo72/images/txt2.png" alt=""> -->
       </div>
       <div class="peo"></div>
       <img src="./demo72/images/txt3.png" alt="" class="ban-txt3">
@@ -29,7 +28,7 @@
 
     <!-- about -->
     <div class="son-title" data-word="关于我们">
-      关于我们
+      关于测试
       <div class="white"></div>
       <div class="white2"></div>
     </div>
@@ -37,10 +36,7 @@
     <div class="about">
       <div class="con-info">
         <p class="text"> 某某舞蹈是河南某某艺术文化有限公司旗下为4-12岁中国儿童提供专业舞蹈教育的素质教育品牌，始创于2015年，应用舞蹈发起机构。</p>
-        <p class="text"> 某某舞蹈是河南某某艺术文化有限公司旗下为4-12岁中国儿童提供专业舞蹈教育的素质教育品牌，始创于2015年，应用舞蹈发起机构。</p>
         <ul>
-          <img src="./demo72/images/tea-img.png" alt="" class="file">
-          <img src="./demo72/images/tea-img.png" alt="" class="file">
           <img src="./demo72/images/tea-img.png" alt="" class="file">
           <img src="./demo72/images/tea-img.png" alt="" class="file">
         </ul>
@@ -120,7 +116,7 @@
 
     <!-- hot   -->
     <div class="son-title" data-word="热招岗位">
-      热招岗位
+      热招测试
       <div class="white"></div>
       <div class="white2"></div>
     </div>
@@ -131,19 +127,13 @@
         <ul>
           <li>
             <div class="info-r">
-              <h2 class="text">拉丁舞老师</h2>
+              <h2 class="text">文字</h2>
               <p class="text">经验：经验不限 学历：学历不限</p>
             </div>
           </li>
           <li>
             <div class="info-r">
-              <h2 class="text">拉丁舞老师</h2>
-              <p class="text">经验：经验不限 学历：学历不限</p>
-            </div>
-          </li>
-          <li>
-            <div class="info-r">
-              <h2 class="text">拉丁舞老师</h2>
+              <h2 class="text">测试</h2>
               <p class="text">经验：经验不限 学历：学历不限</p>
             </div>
           </li>
@@ -155,15 +145,13 @@
 
     <!-- ambient -->
     <div class="son-title" data-word="教学环境">
-      教学环境
+      测试环境
       <div class="white"></div>
       <div class="white2"></div>
     </div>
     <div class="ambient">
       <div class="con-info">
         <ul>
-          <img src="./demo72/images/tea-img.png" alt="" class="file">
-          <img src="./demo72/images/tea-img.png" alt="" class="file">
           <img src="./demo72/images/tea-img.png" alt="" class="file">
           <img src="./demo72/images/tea-img.png" alt="" class="file">
           <img src="./demo72/images/tea-img.png" alt="" class="file">
@@ -176,7 +164,7 @@
 
     <!-- sign   -->
     <div class="son-title" data-word="在线报名">
-      在线报名
+      git测试
       <div class="white"></div>
       <div class="white2"></div>
     </div>
@@ -205,20 +193,6 @@
 
     </div>
 
-    <div class="son-title" data-word="联系我们">
-      联系我们
-      <div class="white"></div>
-      <div class="white2"></div>
-    </div>
-    <div class="contact">
-      <div class="code">
-        <img src="./demo72/images/code.png" alt="" class="file">
-      </div>
-      <div class="con-info">
-        <p class="text">地址：河南省郑州市管城回族区金城国贸大厦2611</p>
-        <p class="text">电话：800-888-8886</p>
-      </div>
-    </div>
   </div>
 
 </body>
